--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -3,10 +3,10 @@
   line-height: 1.5;
   font-weight: 400;
   width: 100%;
+  height: 100%;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-image: linear-gradient(to bottom,#AD2929 -100%,#631E1E);
-  width: 100%;
   aspect-ratio: 16 / 9;
   
   font-synthesis: none;
@@ -14,7 +14,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 
 body {
   margin: 0;
